// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a custom name formatter 1`] = `
<ForwardRef>
  <ForwardRef(Stack)
    gap={4}
  >
    <p>
      The 'cool name' Report will be permanently deleted.
    </p>
    <p>
      <b>
        Warning: This action cannot be undone.
      </b>
    </p>
  </ForwardRef(Stack)>
</ForwardRef>
`;

exports[`should not render anything when no entity is set 1`] = `""`;

exports[`should show the confirmation modal when entity is set 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    title="Delete Report"
  />
  <ForwardRef>
    <ForwardRef(Stack)
      gap={4}
    >
      <p>
        The 'Doomed Report' Report will be permanently deleted.
      </p>
      <p>
        <b>
          Warning: This action cannot be undone.
        </b>
      </p>
    </ForwardRef(Stack)>
  </ForwardRef>
  <ForwardRef(ModalFooter)>
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Delete Report
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;

exports[`should use provided delete text for title and button 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    title="Remove entity"
  />
  <ForwardRef>
    <ForwardRef(Stack)
      gap={4}
    >
      <p>
        The 'Doomed Report' Report will be permanently deleted.
      </p>
      <p>
        <b>
          Warning: This action cannot be undone.
        </b>
      </p>
    </ForwardRef(Stack)>
  </ForwardRef>
  <ForwardRef(ModalFooter)>
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Remove entity
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;
